--- a/glitched_gallery.html
+++ b/glitched_gallery.html
@@ -9,10 +9,10 @@
 <p>Enjoy these images!</p>
 
 <p> <img src="earthglitched.jpg" width="900" height="500"> </p>
-<p> <img src="glitched_fire.png" width="900" height="500"> </p>
+<p> <img src="glitched_fire.PNG" width="900" height="500"> </p>
 <p> <img src="iphoneglitched.jpg" width="900" height="500"> </p>
 <p> <img src="valorant_glitched.png" width="900" height="500"> </p>
 
-<a href="homepage.html">Home</a>
+<a href="index.html">Home</a>
 <br>
 <a href="photoshop_edits_gallery.html">Photoshop Gallery</a>
