--- a/photoshop_edits_gallery.html
+++ b/photoshop_edits_gallery.html
@@ -13,6 +13,6 @@
 
 
 
-<a href="homepage.html">Home</a>
+<a href="index.html">Home</a>
 <br>
 <a href="glitched_gallery.html">Glitched Images Gallery</a>
