new pages added

--- a/glitched_gallery.html
+++ b/glitched_gallery.html
@@ -13,6 +13,18 @@
 <p> <img src="iphoneglitched.jpg" width="900" height="500"> </p>
 <p> <img src="valorant_glitched.png" width="900" height="500"> </p>
 
-<a href="index.html">homepage</a>
+<p>Made using Notepad++ or Audacity via code and audio ​manipulation</p>
+
+<a href="index.html">Homepage</a>
 <br>
 <a href="photoshop_edits_gallery.html">Photoshop Gallery</a>
+<br>
+<a href="blender_gallery.html">Blender Gallery</a>
+<br>
+<a href="Zbrush_gallery.html">Zbrush Gallery</a>
+<br>
+<a href="mememashup.html">Meme Mash Up Gallery</a>
+<br>
+<a href="about_me.html">About Me</a>
+</body>
+</html>
