--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
 
 <p> <img src="bao_logo.png" width="900" height="500"> </p>
 
-<p>click these links to look at my gallerys!</p>
+<p>Gallerys:</p>
 
 <a href="glitched_gallery.html">Glitched Images Gallery</a>
 <br>
 <a href="photoshop_edits_gallery.html">Photoshop Gallery</a>
-
+<br>
+<a href="blender_gallery.html">Blender Gallery</a>
+<br>
+<a href="Zbrush_gallery.html">Zbrush Gallery</a>
+<br>
+<a href="mememashup.html">Meme Mash Up Gallery</a>
+<br>
+<a href="about_me.html">About Me</a>
 </body>
 </html>
