--- a/photoshop_edits_gallery.html
+++ b/photoshop_edits_gallery.html
@@ -6,13 +6,24 @@
 <body>
 
 <h1>Photoshop Works Gallery</h1>
-<p>Enjoy these photo edits!</p>
 
-<p> <img src="mememashup.png" width="900" height="500"> </p>
+
 <p> <img src="photoshopspongebobroad.png" width="900" height="500"> </p>
 
+<p>A simple photoshop project made with the goal of learning the different tools available on Adobe Photoshop. </p>
 
 
-<a href="index.html">homepage</a>
+
+<a href="index.html">Homepage</a>
 <br>
 <a href="glitched_gallery.html">Glitched Images Gallery</a>
+<br>
+<a href="blender_gallery.html">Blender Gallery</a>
+<br>
+<a href="Zbrush_gallery.html">Zbrush Gallery</a>
+<br>
+<a href="mememashup.html">Meme Mash Up Gallery</a>
+<br>
+<a href="about_me.html">About Me</a>
+</body>
+</html>
