Bootstrap code added

--- a/Zbrush_gallery.html
+++ b/Zbrush_gallery.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <title>Bao's Designs</title>
 </head>
+<body>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+<h1 class="text-center">Zbrush Gallery</h1>
+</div>
+</div>
+<p> <img src="zbrushhead1.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p> <img src="zbrushhead2.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p> <img src="zbrushhead3.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p> <img src="zbrushhead3withtounge.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 
 
-<h1>Zbrush Gallery</h1>
 
-<p> <img src="zbrushhead1.jpg" width="900" height="500"> </p>
-<p> <img src="zbrushhead2.jpg" width="900" height="500"> </p>
-<p> <img src="zbrushhead3.jpg" width="900" height="500"> </p>
-<p> <img src="zbrushhead3withtounge.jpg" width="900" height="500"> </p>
-
-
-
-<p>Heads made by Zbursh Mini Core, they were sculpted by myself and was used to practice understanding human anatomy.</p>
+<p class="text-center">Heads made by Zbursh Mini Core, they were sculpted by myself and was used to practice understanding human anatomy.</p>
 
 
 <a href="index.html">Homepage</a>
