--- a/about_me.html
+++ b/about_me.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <title>Bao's Designs</title>
 </head>
 <body>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+<h1 class="text-center">About me</h1>
+</div>
+</div>
+<p class="text-center">Hello my name is Bao Le and I'm a first year student attending San Jose State University. <br> This is a portfolio of all of my work I have done so far and I hope you enjoy! </p>
 
-<h1>About me</h1>
 
-<p>Hello my name is Bao Le and I'm a first year student attending San Jose State University. <br> This is a portfolio of all of my work I have done so far and I hope you enjoy! </p>
-
-
-<p> <img src="bao_logo.png" width="900" height="500"> </p>
+<p> <img src="bao_logo.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 
 <p>Gallerys:</p>
 <a href="index.html">Homepage</a>
