--- a/blender_gallery.html
+++ b/blender_gallery.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 <title>Bao's Designs</title>
 </head>
 <body>
-
-<h1>Blender Gallery</h1>
-
-<h3>Beach Landscape</h3>
-<p> <img src="simplebeach.png" width="900" height="500"> </p>
-<p>Made by using blender, all modeled by myself.
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+<h1 class="text-center">Blender Gallery</h1>
+</div>
+</div>
+<h3 class="text-center">Beach Landscape</h3>
+<p> <img src="simplebeach.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p class="text-center">Made by using blender, all modeled by myself.
 While making this I wanted to make a simple yet aesthetic looking landscape.<br> 
 The colors and lighting were also something I aimed to make the landscape more aesthetically pleasing.</p>
 
 <br>
 <br>
 
-<h3>Persona 4 TV Mash-up</h3>
+<h3 class="text-center">Persona 4 TV Mash-up</h3>
 
-<p> <img src="personamashup.png" width="900" height="500"> </p>
-<p>This was made using Blender.
+<p> <img src="personamashup.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<div class="container">
+<p class="text-center">This was made using Blender.
 The TV model was an asset while the wooden human figure was model by myself.<br>
 While making this model I wanted to find a way to symbolize the way people express and look towards other people and how they are a "blank canvas"</p>
-<h5>Credit</h5>
+<h5 class="text-center">Credit</h5>
 <p>​"Persona 4 - Television" (https://skfb.ly/6T7YT) by LachlanHall is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).</p>
-
+</div>
 <br>
 <br>
 
-<h3>Donut</h3>
-<p> <img src="donutrender.png" width="900" height="500"> </p>
-<p>My first blender model ever made.<p>
+<h3 class="text-center">Donut</h3>
+<p> <img src="donutrender.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p class="text-center">My first blender model ever made.<p>
 
 <br>
 <br>
