--- a/glitched_gallery.html
+++ b/glitched_gallery.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <title>Bao's Designs</title>
 </head>
 <body>
 
-<h1>Glitched Images</h1>
-<p>Enjoy these images!</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+<h1 class="text-center">Glitched Images</h1>
+</div>
+</div>
+<div class="container">
+<p class="text-center"> Made using Notepad++ or Audacity via code and audio ​manipulation </p>
+</div>
+<p> <img src="earthglitched.jpg" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p> <img src="glitched_fire.PNG" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p> <img src="iphoneglitched.jpg" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p> <img src="valorant_glitched.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 
-<p> <img src="earthglitched.jpg" width="900" height="500"> </p>
-<p> <img src="glitched_fire.PNG" width="900" height="500"> </p>
-<p> <img src="iphoneglitched.jpg" width="900" height="500"> </p>
-<p> <img src="valorant_glitched.png" width="900" height="500"> </p>
 
-<p>Made using Notepad++ or Audacity via code and audio ​manipulation</p>
 
 <a href="index.html">Homepage</a>
 <br>
