--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <title>Bao's Designs</title>
 </head>
 <body>
 
-<h1>Welcome to Bao Designs!</h1>
-<p>Enjoy my works so far!</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+<h1 class="text-center">Welcome to Bao Designs!</h1>
+<p class="text-center">Enjoy my works so far!</p>
+</div>
+</div>
 
-
-<p> <img src="bao_logo.png" width="900" height="500"> </p>
+<p> <img src="bao_logo.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 
 <p>Gallerys:</p>
 
@@ -24,5 +38,6 @@
 <a href="mememashup.html">Meme Mash Up Gallery</a>
 <br>
 <a href="about_me.html">About Me</a>
+</div>
 </body>
 </html>
