--- a/photoshop_edits_gallery.html
+++ b/photoshop_edits_gallery.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <title>Bao's Designs</title>
 </head>
+
 <body>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+<h1 class="text-center">Photoshop Works Gallery</h1>
+</div>
+</div>
+<div class="container">
+<p class="text-center"> A simple photoshop project made with the goal of learning the different tools available on Adobe Photoshop.</p>
+</div>
+<p> <img src="photoshopspongebobroad.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 
-<h1>Photoshop Works Gallery</h1>
 
-
-<p> <img src="photoshopspongebobroad.png" width="900" height="500"> </p>
-
-<p>A simple photoshop project made with the goal of learning the different tools available on Adobe Photoshop. </p>
 
 
 
