--- a/mememashup.html
+++ b/mememashup.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <title>Bao's Designs</title>
 </head>
+<body>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+<h1 class="text-center">Meme Mash Up Gallery</h1>
+</div>
+</div>
+<p> <img src="mememashup.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 
 
-<h1>Meme Mash Up Gallery</h1>
 
-<p> <img src="mememashup.png" width="900" height="500"> </p>
-
-
-
-<p>Made via Photoshop<br>Down 185$ and counting, the representation of my gaming and money spending habits.</p>
+<p class="text-center">Made via Photoshop<br>Down 185$ and counting, the representation of my gaming and money spending habits.</p>
 
 
 
