--- a/blender_gallery.html
+++ b/blender_gallery.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+ <ul class="navbar-nav">
+ 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitched_gallery.html">Glitch Images</a></li>
+	<li class="nav-item"><a class="nav-link" href="photoshop_edits_gallery.html">Photoshop Work</a></li>
+	 <li class="nav-item"><a class="nav-link" href="Zbrush_gallery.html">Zbrush Work</a></li>
+	 <li class="nav-item"><a class="nav-link" href="mememashup.html">Meme</a></li>
+   <li class="nav-item"><a class="nav-link" href="netart/index.html">Net-Art</a></li>
+    <li class="nav-item"><a class="nav-link" href="about_me.html">About Me</a></li>
+</ul> 
+</nav>
 <head>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -49,18 +60,6 @@ While making this model I wanted to find a way to symbolize the way people expre
 
 <br>
 <br>
-
-<a href="index.html">Homepage</a>
-<br>
-<a href="glitched_gallery.html">Glitched Images Gallery</a>
-<br>
-<a href="photoshop_edits_gallery.html">Photoshop Gallery</a>
-<br>
-<a href="Zbrush_gallery.html">Zbrush Gallery</a>
-<br>
-<a href="mememashup.html">Meme Mash Up Gallery</a>
-<br>
-<a href="about_me.html">About Me</a>
 
 </body>
 </html>
