--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+ <ul class="navbar-nav">
+ 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitched_gallery.html">Glitch Images</a></li>
+	<li class="nav-item"><a class="nav-link" href="photoshop_edits_gallery.html">Photoshop Work</a></li>
+	<li class="nav-item"><a class="nav-link" href="blender_gallery.html">Blender Work</a></li>
+	 <li class="nav-item"><a class="nav-link" href="Zbrush_gallery.html">Zbrush Work</a></li>
+	 <li class="nav-item"><a class="nav-link" href="mememashup.html">Meme</a></li>
+    <li class="nav-item"><a class="nav-link" href="netart/index.html">Net-Art</a></li>
+    <li class="nav-item"><a class="nav-link" href="about_me.html">About Me</a></li>
+</ul> 
+</nav>
 <head>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -18,26 +30,13 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-<h1 class="text-center">Welcome to Bao Designs!</h1>
-<p class="text-center">Enjoy my works so far!</p>
+<h1 class="text-center">Bao Designs</h1>
+
 </div>
 </div>
 
 <p> <img src="bao_logo.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 
-<p>Gallerys:</p>
-
-<a href="glitched_gallery.html">Glitched Images Gallery</a>
-<br>
-<a href="photoshop_edits_gallery.html">Photoshop Gallery</a>
-<br>
-<a href="blender_gallery.html">Blender Gallery</a>
-<br>
-<a href="Zbrush_gallery.html">Zbrush Gallery</a>
-<br>
-<a href="mememashup.html">Meme Mash Up Gallery</a>
-<br>
-<a href="about_me.html">About Me</a>
 </div>
 </body>
 </html>
