--- a/netart/index.html
+++ b/netart/index.html
@@ -2,13 +2,14 @@
 <html>
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
  <ul class="navbar-nav">
- 	<li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-	<li class="nav-item"><a class="nav-link" href="../glitched_gallery.html">Glitch Images</a></li>
-	<li class="nav-item"><a class="nav-link" href="../photoshop_edits_gallery.html">Photoshop Work</a></li>
-	<li class="nav-item"><a class="nav-link" href="../blender_gallery.html">Blender Work</a></li>
-	 <li class="nav-item"><a class="nav-link" href="../Zbrush_gallery.html">Zbrush Work</a></li>
-	 <li class="nav-item"><a class="nav-link" href="../mememashup.html">Meme</a></li>
-    <li class="nav-item"><a class="nav-link" href="../about_me.html">About Me</a></li>
+ 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitched_gallery.html">Glitch Images</a></li>
+	<li class="nav-item"><a class="nav-link" href="photoshop_edits_gallery.html">Photoshop Work</a></li>
+	<li class="nav-item"><a class="nav-link" href="blender_gallery.html">Blender Work</a></li>
+	 <li class="nav-item"><a class="nav-link" href="Zbrush_gallery.html">Zbrush Work</a></li>
+	 <li class="nav-item"><a class="nav-link" href="mememashup.html">Meme</a></li>
+    <li class="nav-item"><a class="nav-link" href="netart/index.html">Net-Art</a></li>
+    <li class="nav-item"><a class="nav-link" href="about_me.html">About Me</a></li>
 </ul> 
 </nav>
 <head>
