--- a/netart/photoshop_edits_gallery.html
+++ b/netart/photoshop_edits_gallery.html
@@ -8,6 +8,7 @@
 	<li class="nav-item"><a class="nav-link" href="../blender_gallery.html">Blender Work</a></li>
 	 <li class="nav-item"><a class="nav-link" href="../Zbrush_gallery.html">Zbrush Work</a></li>
 	 <li class="nav-item"><a class="nav-link" href="../mememashup.html">Meme</a></li>
+	 <li class="nav-item"><a class="nav-link" href="netart/index.html">Net-Art</a></li>
     <li class="nav-item"><a class="nav-link" href="../about_me.html">About Me</a></li>
 </ul> 
 </nav>
