made images look more organized

--- a/glitched_gallery.html
+++ b/glitched_gallery.html
@@ -36,10 +36,24 @@
 <div class="container">
 <p class="text-center"> Made using Notepad++ or Audacity via code and audio ​manipulation </p>
 </div>
-<p> <img src="earthglitched.jpg" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
-<p> <img src="glitched_fire.PNG" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
-<p> <img src="iphoneglitched.jpg" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
-<p> <img src="valorant_glitched.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+
+<div class="container-fluid">
+
+  <div class="row">
+<div class="col" style="background-color:transparent;"></div>
+  <p> <img src="earthglitched.jpg" class="mx-auto d-block img-fluid"  width="500" height="500"> </p>
+<div class="col" style="background-color:transparent;"></div>
+<p> <img src="glitched_fire.PNG" class="mx-auto d-block img-fluid" width="500" height="500"> </p>
+<div class="col" style="background-color:transparent;"></div>
+	<p> <img src="iphoneglitched.jpg" class="mx-auto d-block img-fluid" width="500" height="500"> </p>
+<div class="col" style="background-color:transparent;"></div>
+
+
+
+  </div>
+</div>
+
+
 
 </body>
 </html>
