--- a/Zbrush_gallery.html
+++ b/Zbrush_gallery.html
@@ -32,16 +32,22 @@
 <h1 class="text-center">Zbrush Gallery</h1>
 </div>
 </div>
-<p> <img src="zbrushhead1.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
-<p> <img src="zbrushhead2.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
-<p> <img src="zbrushhead3.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
-<p> <img src="zbrushhead3withtounge.jpg"  class="mx-auto d-block img-fluid" width="900" height="500"> </p>
-
-
 
 <p class="text-center">Heads made by Zbursh Mini Core, they were sculpted by myself and was used to practice understanding human anatomy.</p>
 
+<div class="container-fluid">
+  <div class="row">
 
+	<p> <img src="zbrushhead1.jpg"  class="mx-auto d-block img-fluid" width="800" height="800"> </p>
+	    <div class="col" style="background-color:transparent;"></div>
+	 <p> <img src="zbrushhead3withtounge.jpg"  class="mx-auto d-block img-fluid" width="800" height="800"> </p>
+	 <p> <img src="zbrushhead2.jpg"  class="mx-auto d-block img-fluid" width="800" height="800"> </p>
+	      <div class="col"style="background-color:transparent;"></div>
+	<p> <img src="zbrushhead3.jpg"  class="mx-auto d-block img-fluid" width="800" height="800"> </p>
+
+
+  </div>
+</div>
 
 </body>
 </html>
