Minor changes to net art and about me page

--- a/about_me.html
+++ b/about_me.html
@@ -32,7 +32,7 @@
 <h1 class="text-center">About me</h1>
 </div>
 </div>
-<p class="text-center">Hello my name is Bao Le and I'm a first year student attending San Jose State University. <br> This is a portfolio of all of my work I have done so far and I hope you enjoy! </p>
+<p class="text-center">Bao Le is a student at San Jose State University pursuing a Digital Media Arts degree. Though being new at digital art, Bao has found it quite enjoyable and does his best to create the best imaginable works and wishes to improve as time comes by. </p>
 
 
 <p> <img src="bao_logo.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
