--- a/netart/index.html
+++ b/netart/index.html
@@ -29,7 +29,8 @@
 <body>
 
 
-<h1>Welcome to Bao Designs!</h1>
+<h1>Net-Art</h1>
+<p>This is the prototype of the website you are on now</p>
 <p>Please use the Gallery Links to look through my net-art work</p>
 
 
