updated with new work (A.I and horror hallway)

--- a/AI.html
+++ b/AI.html
@@ -13,6 +13,7 @@
     <li class="nav-item"><a class="nav-link" href="about_me.html">About Me</a></li>
 </ul> 
 </nav>
+
 <head>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -28,16 +29,37 @@
 <title>Bao's Designs</title>
 </head>
 <body>
+
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-<h1 class="text-center">About me</h1>
+<h1 class="text-center">A.I Gallery</h1>
+
 </div>
 </div>
-<p class="text-center">Bao Le is a student at San Jose State University pursuing a Digital Media Arts degree. Though being new at digital art, Bao has found it quite enjoyable and does his best to create the best imaginable works and wishes to improve as time comes by. </p>
 
+<h3 class="text-center"> Basketball Gallery</h3>
 
-<p> <img src="bao_logo.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p class="text-center">Made via AdaIN in RunwayML<br>I wanted to combine the idea of comic heros and real life heros, so I combined the comic art style with NBA players dunking. </p>
 
+<div class="container-fluid">
+ <div class="row">
+ 	 <div class="col" style="background-color:transparent;"></div>
+	<p> <img src="AIbb1.png"  class="mx-auto d-block img-fluid" width="400" height="400"> </p>
+	 <p> <img src="AIbb2.png"  class="mx-auto d-block img-fluid" width="400" height="400"> </p> 
+	<p> <img src="AIbb3.png"  class="mx-auto d-block img-fluid" width="400" height="400"> </p>
+	  	 <div class="col" style="background-color:transparent;"></div>
+	</div>
+</div>
 
+<br>
+<br>
+
+<h3 class="text-center"> Spade Coco</h3>
+
+<p> <img src="spadecoco.jpeg"  class="mx-auto d-block img-fluid" width="800" height="800"> </p>
+
+<p class="text-center">Made via Spade Coco in RunwayML<br> I wanted to use spade coco to represent a scene from spiderman.</p>
+
+</div>
 </body>
 </html>
