--- a/blender_gallery.html
+++ b/blender_gallery.html
@@ -9,6 +9,7 @@
 	 <li class="nav-item"><a class="nav-link" href="Zbrush_gallery.html">Zbrush Work</a></li>
 	 <li class="nav-item"><a class="nav-link" href="mememashup.html">Meme</a></li>
     <li class="nav-item"><a class="nav-link" href="netart/index.html">Net-Art</a></li>
+	<li class="nav-item"><a class="nav-link" href="AI.html">A.I Gallery</a></li>
     <li class="nav-item"><a class="nav-link" href="about_me.html">About Me</a></li>
 </ul> 
 </nav>
@@ -33,6 +34,16 @@
 <h1 class="text-center">Blender Gallery</h1>
 </div>
 </div>
+
+<h3 class="text-center">Horror Hallway</h3>
+<p> <img src="horrorhallway.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
+<p class="text-center">Made by using blender, all models are made by myself.
+While making this I wanted to focus on the lighting aspect in Blender<br> 
+To do this, I thought a dark themed Blender scene would create empathsize lighitng the most, and darkest is related to horror, so the idea was perfect for my goal.</p>
+
+<br>
+<br>
+
 <h3 class="text-center">Beach Landscape</h3>
 <p> <img src="simplebeach.png" class="mx-auto d-block img-fluid" width="900" height="500"> </p>
 <p class="text-center">Made by using blender, all modeled by myself.
